--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   "homepage": "https://github.com/agritsik/ws-service#readme",
   "dependencies": {
     "express": "^4.14.1",
+    "redis": "^2.6.5",
     "ws": "^2.0.2"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0"
   }
 }
